Convert project to C due to uefi-rs missed some functionallities

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,16 @@
-/target/
+*.efi
+*.o
+*.so
+.deps/
+/.vscode/
+/aclocal.m4
+/autom4te.cache/
+/compile
+/config.log
+/config.status
+/configure
+/depcomp
+/install-sh
+/missing
+Makefile
+Makefile.in
