Fix broken loader

--- a/src/loader/Makefile.am
+++ b/src/loader/Makefile.am
@@ -1,21 +1,26 @@
 EXEEXT = .efi
 
+if X86_64
 efibin_PROGRAMS = bootx64
+endif
 
 bootx64_CFLAGS = \
+	-ffreestanding \
+	-fno-stack-check \
+	-fno-stack-protector \
+	-fpic \
 	-fshort-wchar \
+	-mno-red-zone \
+	-DGNU_EFI_USE_MS_ABI \
 	-I/usr/include/efi \
 	-I/usr/include/efi/$(efiarch)
 bootx64_LDADD = \
-	-lefi
+	-lefi -lgnuefi
 bootx64_LINK = ./link.sh \
 	$(CCLD) \
+	$(OBJCOPY) \
 	$@ \
 	$(efiarch)
-	$(bootx64_CFLAGS) \
-	$(CFLAGS) \
-	$(AM_LDFLAGS) \
-	$(LDFLAGS)
 bootx64_SOURCES = \
 	main.c
 
