Refactor some code

--- a/src/tcg-loader/Makefile.am
+++ b/src/tcg-loader/Makefile.am
@@ -22,13 +22,18 @@ bootx64_LINK = ./link.sh \
 	$@ \
 	$(efiarch)
 bootx64_SOURCES = \
+	arch/x86/linux.c \
 	proto/tpm.h \
 	config.c \
 	config.h \
 	image.c \
 	image.h \
+	linux.c \
+	linux.h \
 	main.c \
 	main.h \
+	page.c \
+	page.h \
 	path.c \
 	path.h
 
