Revise project structure

--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,3 @@
-*.efi
 *.o
-*.so
-.deps/
-.dirstamp
-/.vscode/
-/aclocal.m4
-/autom4te.cache/
-/compile
-/config.log
-/config.status
-/configure
-/depcomp
-/install-sh
-/missing
-/vm/bios/OVMF_VARS.fd
-/vm/disk1.img
-Makefile
-Makefile.in
+/bootx64.efi
+/bootx64.efi.so
